# tarpar

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: TODO.md  tarpar-doc.md
docs/assets/: IT-cycle  IT-cycle.drawio  pics.drawio
examples/: html-style.rs  html-text.rs  lifetime1.rs  lifetime2.rs  regex-test.rs  run-release.sh  scraper.rs  tar-fiit-example.xml  test-fiit-example2 short.xml  test1-confl.drawio.xml  test1-net.drawio.xml
examples/media/: tar-fiit-example.xml  test-fiit-example2 short.xml  test1-confl.drawio.xml
src/: lib.rs  main.rs
src/diagram_element/: mod.rs
templates/: L1-diagram-template.drawio
tests/: test_basic.rs  test_content.rs
tests/samples/: sample4tests.drawio
